Updated some changed

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
       <ul class="a">
         <ul>
           <li><img src="./img/Toaha.jpg"></li>
-          <li class="c"><p>Abdullah</p></li>
+          <li class="c"><p>Abdullah Jubayer</p></li>
         </ul>
         <li><i class="fas fa-dice-four"></i></li>
         <li><i class="fab fa-facebook-messenger"></i></li>
